# back/jobservice/docs/swagger.yaml
@@ -50,25 +50,24 @@ definitions:
     - failed
     type: string
     x-enum-varnames:
-    - JobStatus_Unknown
-    - JobStatus_Pending
-    - JobStatus_InProgress
-    - JobStatus_Completed
-    - JobStatus_Failed
+    - Status_Unknown
+    - Status_Pending
+    - Status_InProgress
+    - Status_Completed
+    - Status_Failed
   dtos.TaskType:
     enum:
     - ""
     - get_weather
-    - get_chaban_delmas_bridge_status
+    - get_chaban_delmas_bridge_schedule
     type: string
     x-enum-varnames:
-    - JobTaskType_Unknown
-    - JobTaskType_Weather
-    - JobTaskType_GetChabanDelmasBridgeStatus
+    - TaskType_Unknown
+    - TaskType_Weather
+    - TaskType_GetChabanDelmasBridgeSchedule
   dtos.UpdateJobRequest:
     properties:
       name:
-        description: 'in: body'
         maxLength: 255
         type: string
       status:
